syntax = "proto3";

package eventregistration;

service EventRegistrationService {
  rpc notifyEventCreated(EventNotificationRequest) returns (EventNotificationResponse);
  rpc notifyEventUpdated(EventNotificationRequest) returns (EventNotificationResponse);
  rpc notifyEventCancelled(EventNotificationRequest) returns (EventNotificationResponse);
}

message EventNotificationRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string startAt = 4;
  string endAt = 5;
  int32 price = 6;
  string saleStartAt = 7;
  string saleEndAt = 8;
  string addressStreet = 9;
  string addressNumber = 10;
  string addressCity = 11;
  string addressState = 12;
  string addressZipcode = 13;
  string addressCountry = 14;
  int32 capacity = 15;
  bool isFree = 16;
  string eventType = 17;
  string status = 18;
  string createdAt = 19;
  string updatedAt = 20;
}

message EventNotificationResponse {
  bool success = 1;
  string message = 2;
}