syntax = "proto3";

package notifications;

service NotificationService {

  rpc SendAccountNotification (AccountNotificationRequest) returns (NotificationResponse);
  rpc SendEventNotification (EventNotificationRequest) returns (NotificationResponse);
  rpc SendPaymentNotification (PaymentNotificationRequest) returns (NotificationResponse);

}

message AccountNotificationRequest {
  string user_id = 1;
  string recipient_address = 2;
  string payload_json = 3;
  string template_name = 4;
}

message EventNotificationRequest {
  string user_id = 1;
  string recipient_address = 2;
  string event_id = 3;
  string payload_json = 4;
  string template_name = 5;
}

message PaymentNotificationRequest {
  string user_id = 1;
  string recipient_address = 2;
  string payment_id = 3; 
  string payload_json = 4;
  string template_name = 5;
}

message NotificationResponse {
  string notification_id = 1;
  string status = 2;
}